# CPP-Image-processing

./: CMakeLists.txt
src/: CMakeLists.txt
src/igg_image/: CMakeLists.txt  image.cpp  image.h
src/run/: CMakeLists.txt  main.cpp
